fix(collections/board): mouse horizontal scroll no longer working

--- a/apps/client/src/widgets/collections/board/index.css
+++ b/apps/client/src/widgets/collections/board/index.css
@@ -2,6 +2,7 @@
   position: relative;
   height: 100%;
   user-select: none;
+  overflow-x: auto;
 
   --card-font-size: 0.9em;
   --card-line-height: 1.2;
